# cgvc

./: CMakeLists.txt
include/cgvc/: cgvc.h
src/: decoder.cpp  encoder.cpp  main.cpp
